--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arabic Code Ciphering - Activation</title>
@@ -11,14 +14,234 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Arabic Cipher">
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167x167.png">
-    <meta name="msapplication-TileImage" content="/icons/icon-144x144.png">
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
+    <meta name="msapplication-TileImage" content="/icons/android-chrome-192x192.png">
     <meta name="msapplication-TileColor" content="#2c3e50">
     <meta name="theme-color" content="#2c3e50">
     <style>
+        body {
+            font-family: 'Cairo', sans-serif;
+            background-color: #2c3e50; /* خلفية داكنة مائلة للرمادي والأزرق */
+            color: #ecf0f1; /* نص فاتح ليبرز على الخلفية الداكنة */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            flex-direction: column;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .container {
+            background-color: #34495e; /* لون أغمق قليلاً للحاوية */
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
+        }
+        h1 {
+            color: #ecf0f1;
+            margin-bottom: 25px;
+            font-size: 1.8em;
+        }
+        .input-group {
+            margin-bottom: 20px;
+            text-align: right;
+        }
+        .input-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 1.1em;
+            color: #bdc3c7;
+        }
+        .input-group input[type="text"] {
+            width: calc(100% - 20px);
+            padding: 12px 10px;
+            border: 1px solid #7f8c8d;
+            border-radius: 5px;
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            font-size: 1em;
+            text-align: right;
+        }
+        .btn {
+            background-color: #27ae60; /* زر أخضر جذاب */
+            color: white;
+            padding: 12px 25px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+        .btn:hover {
+            background-color: #2ecc71; /* ظل أخضر أفتح عند التمرير */
+        }
+        .message {
+            margin-top: 20px;
+            font-weight: bold;
+            color: #e74c3c; /* أحمر للخطأ */
+        }
+        .success-message {
+            color: #2ecc71; /* أخضر للنجاح */
+        }
+        .ciphered-text-container {
+            margin-top: 30px;
+            background-color: #2c3e50;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: right;
+            border: 1px solid #7f8c8d;
+        }
+        .ciphered-text-container h2 {
+            color: #ecf0f1;
+            margin-top: 0;
+            font-size: 1.5em;
+            margin-bottom: 15px;
+        }
+        .ciphered-text-area {
+            width: calc(100% - 20px);
+            height: 150px;
+            padding: 10px;
+            border: 1px solid #7f8c8d;
+            border-radius: 5px;
+            background-color: #34495e;
+            color: #ecf0f1;
+            font-size: 1em;
+            resize: vertical;
+            text-align: right;
+        }
+        .footer-message {
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #bdc3c7;
+        }
+        .hidden {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container" id="activation-screen">
+        <h1><i class="fas fa-key"></i> Activate Your License <i class="fas fa-lock"></i></h1>
+        <div class="input-group">
+            <label for="serialKeyInput">Serial Key:</label>
+            <input type="text" id="serialKeyInput" placeholder="أدخل مفتاح التفعيل هنا">
+        </div>
+        <button class="btn" onclick="activateApp()">Activate</button>
+        <div id="activationMessage" class="message"></div>
+        <button class="btn" onclick="loadActivationBackup()">Load Activation Backup</button>
+        <p class="footer-message">
+            By activating, you agree to the <a href="#" style="color:#2ecc71;">Terms & Conditions</a>.
+        </p>
+    </div>
+
+    <div class="container hidden" id="app-screen">
+        <h1><i class="fas fa-lock-open"></i> App Activated <i class="fas fa-lock-open"></i></h1>
+        <div class="ciphered-text-container">
+            <h2>Ciphered Text:</h2>
+            <textarea id="cipheredTextArea" class="ciphered-text-area" readonly></textarea>
+        </div>
+        <p class="footer-message">Your application is now fully functional.</p>
+    </div>
+
+    <script>
+        // هذا هو الرابط الصحيح لتطبيق Apps Script الخاص بك.
+        // تأكد من استبدال "YOUR_NEW_WEB_APP_URL_HERE" بالرابط الفعلي لنشر تطبيقك.
+        const appsScriptUrl = "YOUR_NEW_WEB_APP_URL_HERE"; 
+
+        const activationScreen = document.getElementById('activation-screen');
+        const appScreen = document.getElementById('app-screen');
+        const serialKeyInput = document.getElementById('serialKeyInput');
+        const activationMessage = document.getElementById('activationMessage');
+        const cipheredTextArea = document.getElementById('cipheredTextArea');
+
+        // Check activation status on load
+        document.addEventListener('DOMContentLoaded', () => {
+            checkActivationStatus();
+
+            // Register Service Worker for PWA features
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then(reg => console.log('Service Worker Registered', reg))
+                    .catch(err => console.error('Service Worker Registration Failed', err));
+            }
+        });
+
+        async function checkActivationStatus() {
+            const storedSerialKey = localStorage.getItem('activatedSerialKey');
+            if (storedSerialKey) {
+                const response = await fetch(`${appsScriptUrl}?action=checkStatus&serialKey=${storedSerialKey}`);
+                const data = await response.json();
+                if (data.status === 'success' && data.activated) {
+                    showAppScreen(data.cipheredText);
+                } else {
+                    showActivationScreen("Serial key no longer valid. Please reactivate.");
+                    localStorage.removeItem('activatedSerialKey');
+                }
+            } else {
+                showActivationScreen();
+            }
+        }
+
+        async function activateApp() {
+            const serialKey = serialKeyInput.value.trim();
+            if (!serialKey) {
+                showActivationScreen("Please enter a serial key.");
+                return;
+            }
+
+            activationMessage.textContent = 'Activating...';
+            activationMessage.classList.remove('success-message');
+            activationMessage.style.color = '#bdc3c7'; // Grey for processing
+
+            try {
+                const response = await fetch(`${appsScriptUrl}?action=activate&serialKey=${serialKey}`);
+                const data = await response.json();
+
+                if (data.status === 'success') {
+                    localStorage.setItem('activatedSerialKey', serialKey);
+                    showAppScreen(data.cipheredText);
+                    activationMessage.textContent = 'Activation successful!';
+                    activationMessage.classList.add('success-message');
+                } else {
+                    showActivationScreen(data.message || "Activation failed.");
+                }
+            } catch (error) {
+                console.error('Error during activation:', error);
+                showActivationScreen("Network error or invalid server response.");
+            }
+        }
+
+        function loadActivationBackup() {
+            const backupKey = prompt("Please enter your backup serial key:");
+            if (backupKey) {
+                serialKeyInput.value = backupKey;
+                activateApp();
+            }
+        }
+
+        function showActivationScreen(message = '') {
+            activationScreen.classList.remove('hidden');
+            appScreen.classList.add('hidden');
+            activationMessage.textContent = message;
+            activationMessage.style.color = '#e74c3c'; // Red for errors
+        }
+
+        function showAppScreen(cipheredText = 'No text provided.') {
+            activationScreen.classList.add('hidden');
+            appScreen.classList.remove('hidden');
+            cipheredTextArea.value = cipheredText;
+            activationMessage.textContent = ''; // Clear activation message
+        }
+    </script>
+</body>
+</html>
+
         body {
             font-family: 'Cairo', sans-serif;
             background-color: #2c3e50; /* خلفية داكنة مائلة للرمادي الأزرق */
